--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,5 +25,117 @@
   <body>
     <div id="map"></div>
     <script src="app.js"></script>
+
+    <!-- add a tooltip element that will be used to display 3 values:
+    - the name of the municipality
+    - the number of votes for the winning party
+    - th enumber of votes for the second party -->
+    <div
+      id="tooltip"
+      style="
+        position: absolute;
+        display: none;
+        background: #fff;
+        padding: 15px;
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+        color: #333;
+        font-family: 'Helvetica', Arial, sans-serif;
+        font-size: 14px;
+        max-width: 320px;
+        z-index: 9999;
+      "
+    >
+      <!-- Title -->
+      <div
+        id="tooltip-title"
+        style="font-size: 18px; font-weight: bold; margin-bottom: 2px; text-transform: capitalize;"
+      >
+        Bale - Valle
+      </div>
+
+      <!-- Subtitle -->
+      <div
+        id="tooltip-subtitle"
+        style="font-size: 14px; color: #666; margin-bottom: 12px"
+      >
+        Istarska županija
+      </div>
+
+      <!-- Table of results -->
+      <table style="width: 100%; border-collapse: collapse">
+        <thead style="font-size: 11px; color: #777">
+          <tr style="border-bottom: 1px solid #ddd">
+            <th style="text-align: left; padding: 8px">Kandidat</th>
+            <th style="text-align: right; padding: 8px">Ukupno</th>
+            <th style="text-align: right; padding: 8px">Postotak</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Candidate 1 row -->
+          <tr>
+            <td
+              style="padding: 8px; display: flex; align-items: center; gap: 6px"
+            >
+              <!-- Profile image -->
+              <img
+                id="candidate1-img"
+                src="https://www.index.hr/Content/img/homepageBanners/presidential-elections-2024/second-round/1.png"
+                alt="Candidate 1"
+                style="
+                  width: 32px;
+                  height: 32px;
+                  border-radius: 50%;
+                  object-fit: cover;
+                "
+              />
+              <span id="candidate1-name">Milanović</span>
+            </td>
+            <td id="candidate1-total" style="padding: 8px; text-align: right">
+              461
+            </td>
+            <td id="candidate1-percent" style="padding: 8px; text-align: right">
+              76.83%
+            </td>
+          </tr>
+
+          <!-- Candidate 2 row -->
+          <tr>
+            <td
+              style="padding: 8px; display: flex; align-items: center; gap: 6px"
+            >
+              <!-- Profile image -->
+              <img
+                id="candidate2-img"
+                src="https://www.index.hr/Content/img/homepageBanners/presidential-elections-2024/second-round/2.png"
+                alt="Candidate 2"
+                style="
+                  width: 32px;
+                  height: 32px;
+                  border-radius: 50%;
+                  object-fit: cover;
+                "
+              />
+              <span id="candidate2-name">Primorac</span>
+            </td>
+            <td id="candidate2-total" style="padding: 8px; text-align: right">
+              77
+            </td>
+            <td id="candidate2-percent" style="padding: 8px; text-align: right">
+              12.83%
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <!-- Footer / Extra info -->
+      <div
+        id="tooltip-footer"
+        style="margin-top: 10px; font-size: 12px; color: #777"
+      >
+        94%? prebrojanih glasova.
+      </div>
+    </div>
   </body>
 </html>
