--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
   </head>
   <body>
     <div id="map"></div>
+    <!-- add attribution div that is vertically centered and right aligned, saying Autor: Velimir Gaspaorvic -->
+    <div
+      style="
+        position: absolute;
+        bottom: 50px;
+        right: 20px;
+        background: rgba(255, 255, 255, 0.8);
+        padding: 5px 10px;
+        font-size: 12px;
+        color: #333;
+        font-family: 'Helvetica', Arial, sans-serif;
+        z-index: 9999;
+      "
+    >
+      Autor: Velimir Gašparović
+    </div>
     <script src="app.js"></script>
     <div
       id="tooltip"
