--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
 
       #map {
         width: 100vw;
-        height: 100vh;
+        height: 95vh;
       }
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -34,7 +34,7 @@
         padding: 5px 10px;
         font-size: 12px;
         color: #333;
-        font-family: 'Helvetica', Arial, sans-serif;
+        font-family: &quot;Helvetica&quot;, Arial, sans-serif;
         z-index: 9999;
       "
     >
@@ -52,7 +52,7 @@
         border-radius: 6px;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         color: #333;
-        font-family: 'Helvetica', Arial, sans-serif;
+        font-family: &quot;Helvetica&quot;, Arial, sans-serif;
         font-size: 14px;
         width: 350px;
         max-width: 350px;
