--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         width: 100vw;
         height: 90vh;
       }
+
+      .domain {
+        opacity: 0;
+      }
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/flubber"></script>
@@ -36,7 +40,7 @@
         border-radius: 6px;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         color: #333;
-        font-family: &quot;Helvetica&quot;, Arial, sans-serif;
+        font-family: sans-serif;
         font-size: 14px;
         width: 350px;
         max-width: 350px;
