--- a/index.html
+++ b/index.html
@@ -51,39 +51,43 @@
       <div
         id="tooltip-title"
         style="
-          font-size: 18px;
-          font-weight: bold;
+          font-size: 24px;
+          font-weight: 500;
           margin-bottom: 2px;
           text-transform: capitalize;
         "
       >
-        Bale - Valle
+        Oprtalj - Portole
       </div>
 
       <!-- Subtitle -->
       <div
         id="tooltip-subtitle"
-        style="font-size: 14px; color: #666; margin-bottom: 12px"
+        style="
+          font-size: 16px;
+          color: #666;
+          margin-bottom: 20px;
+          font-weight: 300;
+        "
       >
         Istarska županija
       </div>
 
       <!-- Table of results -->
       <table style="width: 100%; border-collapse: collapse">
-        <thead style="font-size: 11px; color: #777">
-          <tr style="border-bottom: 1px solid #ddd">
-            <!-- Empty header for the image column -->
+        <thead style="font-size: 13px; color: #333">
+          <tr style="border-bottom: 1px solid #eee">
             <th style="text-align: left; padding: 8px"></th>
             <th style="text-align: left; padding: 8px">Kandidat</th>
             <th style="text-align: right; padding: 8px">Ukupno</th>
-            <th style="text-align: right; padding: 8px">Postotak</th>
+            <th>Postotak</th>
+            <th style="text-align: left; padding: 8px; width: 20px"></th>
           </tr>
         </thead>
         <tbody>
           <!-- Candidate 1 row -->
-          <tr>
-            <!-- Profile image in its own TD -->
-            <td style="padding: 8px; text-align: center">
+          <tr style="border-bottom: 1px solid #eee">
+            <td style="text-align: center; width: 24px">
               <img
                 id="candidate1-img"
                 src="https://www.index.hr/Content/img/homepageBanners/presidential-elections-2024/second-round/1.png"
@@ -96,19 +100,30 @@
                 "
               />
             </td>
-            <td id="candidate1-name" style="padding: 8px">Milanović</td>
-            <td id="candidate1-total" style="padding: 8px; text-align: right">
+            <td
+              id="candidate1-name"
+              style="padding: 12px 8px; font-weight: 400"
+            >
+              Milanović
+            </td>
+            <td
+              id="candidate1-total"
+              style="padding: 12px 8px; text-align: right; font-weight: 400"
+            >
               461
             </td>
-            <td id="candidate1-percent" style="padding: 8px; text-align: right">
-              76.83%
+            <td
+              id="candidate1-percent"
+              style="text-align: right; font-weight: 400"
+            >
+              76.83
             </td>
+            <td>%</td>
           </tr>
 
           <!-- Candidate 2 row -->
-          <tr>
-            <!-- Profile image in its own TD -->
-            <td style="padding: 8px; text-align: center">
+          <tr style="border-bottom: 1px solid #eee">
+            <td style="padding: 12px 8px; text-align: center; width: 24px">
               <img
                 id="candidate2-img"
                 src="https://www.index.hr/Content/img/homepageBanners/presidential-elections-2024/second-round/2.png"
@@ -121,13 +136,25 @@
                 "
               />
             </td>
-            <td id="candidate2-name" style="padding: 8px">Primorac</td>
-            <td id="candidate2-total" style="padding: 8px; text-align: right">
+            <td
+              id="candidate2-name"
+              style="padding: 12px 8px; font-weight: 400"
+            >
+              Primorac
+            </td>
+            <td
+              id="candidate2-total"
+              style="padding: 12px 8px; text-align: right; font-weight: 400"
+            >
               77
             </td>
-            <td id="candidate2-percent" style="padding: 8px; text-align: right">
-              12.83%
+            <td
+              id="candidate2-percent"
+              style="text-align: right; font-weight: 400"
+            >
+              12.83
             </td>
+            <td>%</td>
           </tr>
         </tbody>
       </table>
@@ -135,7 +162,7 @@
       <!-- Footer / Extra info -->
       <div
         id="tooltip-footer"
-        style="margin-top: 10px; font-size: 12px; color: #777"
+        style="margin-top: 15px; font-size: 13px; color: #666"
       >
         100% prebrojanih glasova.
       </div>
