--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
 
       .domain {
-        opacity: 0;
+        /* opacity: 0; */
       }
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
